--- a/src/Pages/Home/About/About.css
+++ b/src/Pages/Home/About/About.css
@@ -10,18 +10,9 @@ html {
 body {
   margin: 0;
   width: 100%;
-  font-family: "Oswald", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   font-size: 12pt;
   font-weight: 400;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Bebas Neue", cursive;
 }
 
 a {
